--- a/kitty.conf
+++ b/kitty.conf
@@ -494,7 +494,7 @@ window_padding_width 12 14
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations titlebar-only
+# hide_window_decorations titlebar-only
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -880,7 +880,7 @@ color15 #ffffff
 
 #: OS specific tweaks {{{
 
-# macos_titlebar_color system
+macos_titlebar_color background
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
