--- a/kitty.conf
+++ b/kitty.conf
@@ -401,9 +401,9 @@ cursor_blink_interval 0
 
 #: Window layout {{{
 
-# remember_window_size  yes
-# initial_window_width  800
-# initial_window_height 450
+remember_window_size  no
+initial_window_width  800
+initial_window_height 450
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
