--- a/kitty.conf
+++ b/kitty.conf
@@ -23,7 +23,7 @@ bold_italic_font MonoLisa Medium Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 17.0
+font_size 16.0
 
 #: Font size (in pts)
 
@@ -1169,7 +1169,7 @@ macos_titlebar_color background
 # map shift+ctrl+tab  previous_tab
 # map shift+cmd+[     previous_tab
 # map kitty_mod+t     new_tab
-# map cmd+t           new_tab
+map cmd+t           new_tab_with_cwd
 # map kitty_mod+q     close_tab
 # map cmd+w           close_tab
 # map shift+cmd+w     close_os_window
