--- a/kitty.conf
+++ b/kitty.conf
@@ -69,7 +69,7 @@ font_size 16.0
 
 #:     symbol_map codepoints Font Family Name
 
-# disable_ligatures never
+disable_ligatures always
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
@@ -88,6 +88,9 @@ font_size 16.0
 #: ligatures, use the font_features setting.
 
 # font_features none
+
+font_features MonoLisa-Regular -liga
+font_features MonoLisa-Bold -liga
 
 #: Choose exactly which OpenType features to enable or disable. This
 #: is useful as some fonts might have features worthwhile in a
