--- a/kitty.conf
+++ b/kitty.conf
@@ -981,6 +981,9 @@ macos_titlebar_color background
 
 #:     on_key_input: glfw key: 65 native_code: 0x61 action: PRESS mods: 0x0 text: 'a'
 
+map alt+left send_text all \x1b\x62
+map alt+right send_text all \x1b\x66
+
 #: Here, the key name for the A key is 0x61 and you can use it with::
 
 #:     map ctrl+0x61 something
