--- a/kitty.conf
+++ b/kitty.conf
@@ -830,7 +830,7 @@ color15 #ffffff
 
 #: The value of MYVAR2 will be a/<path to home directory>/b.
 
-# update_check_interval 24
+update_check_interval 24
 
 #: Periodically check if an update to kitty is available. If an update
 #: is found a system notification is displayed informing you of the
