--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -4,3 +4,5 @@ font-size = 16
 confirm-close-surface = false
 macos-titlebar-style = tabs
 macos-option-as-alt = true
+window-save-state = always
+macos-icon = xray
